// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthResponse.svelte > should render response with changes 1`] = `
<div>
  <!---->
  
  
</div>
`;

exports[`AuthResponse.svelte > should render response with changes 2`] = `
<div>
  <!---->
  <div
    class="flex w-full flex-col"
    data-alert=""
  >
    Successfully logged in
  </div>
  
  
</div>
`;

exports[`AuthResponse.svelte > should render response with error 1`] = `
<div>
  <!---->
  <div
    class="flex w-full flex-col hasError"
    data-alert=""
  >
    An error occurred
  </div>
  
  
</div>
`;
